<resources>
    <string name="app_name">Dopravní podniky</string>
    <string name="dopravni_podniky">Dopravní podniky</string>
    <string name="linky">Linky</string>
    <string name="garaz">Vozový park</string>
    <string name="obchod">Obchod</string>
    <string name="kc">%s €</string>
    <string name="zisk_penez">%s €/min</string>
    <string name="zisk">Zisk: %s</string>
    <string name="vypraveno">%1$d z %2$d vozů</string>
    <string name="garaz_koupit_vozidlo">Koupit vozidlo</string>
    <string name="uspechy">Úspěchy</string>
    <string name="nastaveni">Nastavení</string>
    <string name="linka_tohle">Linka: %s</string>
    <string name="ev_c">ev. č. %d</string>
    <string name="ikonka_busiku">Ikonka busíku</string>
    <string name="rozbalit">Rozbalit</string>
    <string name="zabalit">Zabalit</string>
    <string name="ponicenost" formatted="true">Poničenost: %s %%</string>
    <string name="naklady">Náklady: %s</string>
    <string name="autobus">autobus</string>
    <string name="trolejbus">trolejbus</string>
    <string name="elektrobus">elektrobus</string>
    <string name="susbus">susbus</string>
    <string name="prodat_za">Prodat za %s</string>
    <string name="koupit">Koupit za %s €</string>
    <string name="ev_c_existuje">Toto evidenční číslo již existuej!</string>
    <string name="zadejte_ev_c">Zadejte evidenční číslo nového %su:</string>
    <string name="upravte_ev_c">Upravte evidenční číslo Vašeho %su:</string>
    <string name="upravit_evc">Upravit evidenční číslo</string>
    <string name="nova_linka">Nová linka</string>
    <string name="zobrazit_na_mape">Zobrazit na mapě</string>
    <string name="upravit_mesto">Upravit město</string>
    <string name="dokoncit">Dokončit</string>
    <string name="odstranit">Odstranit</string>
    <string name="hotovo">Hotovo</string>
    <string name="zadejte_cislo_linky">Zadejte číslo linky</string>
    <string name="nelze_prodat_dp">Tento dopravní podnik nelze prodat, protože je aktuálně otevřený</string>
    <string name="vypravit">Vypravit</string>
    <string name="zvolte_barvu">Zvolte barvu:</string>
    <string name="zvolte_tema">Zvolte téma dopravního podniku:</string>
    <string name="malo_penez">Nemáte dostatek peněz!!!</string>
    <string name="pocet_ulic">Počet ulic: %1$S; Z toho má troleje: %2$s</string>
    <string name="pocet_domu">Počet domů: %s</string>
    <string name="pocet_zastavek">Počet zastávek: %s</string>
    <string name="barva_linky">"Barva linky</string>
    <string name="barva_temata">"Barva témata: %s</string>
    <string name="linka_existuje">Linka s tímto číslem již existuje!</string>
    <string name="linka_kratka">Linka musí být na alespoň jedné ulici</string>
    <string name="spatne_cislo_linky">Neplatné číslo linky</string>
    <string name="zadna_linka_vybrana">Žádná linka</string>
    <string name="vyberte_linku">Vyberte linku:</string>
    <string name="vybrat_mesto">Vybrat město</string>
    <string name="nevyzvednuto">Nevyzvednuto: %s</string>
    <string name="uspesne_koupeno">Úspěšně koupeno</string>
    <string name="odebrat_bus_z_linek">Odebrat z linek</string>
    <string name="fakt_chcete_prodat_bus">Opravdu chcete prodat tento bus?</string>
    <string name="ne">Ne</string>
    <string name="ano">Ano</string>
    <string name="tento_bus_neexistuje">Tento bus v tomto DP neexistuje</string>
    <string name="uspesne_vytvoreno">Úspěšně vytvořeno</string>
    <string name="tato_linka_neexistuje">Tato linka v tomto DP neexistuje</string>
    <string name="tato_ulice_neexistuje">Tato ulice v tomto městě neexistuje</string>
    <string name="automaticky_prirazovat_ev_c">Automaticky přidělovat evidenční čísla</string>
    <string name="vicenasobne_kupovani">Kupovat více busů najednou</string>
    <string name="bohuzel_dlouho_neaktivni">\n\nBohužel jste byl/a moc dlouho neaktivní, proto se Vám výdělek snížil tak, aby odpovídal výdělku za 8 hodin.</string>
    <string name="vyuctovani">Doba neaktivity: %1$s\nSimulovaná doba: %2$s (%3$s %%)</string>
    <plurals name="min">
        <item quantity="one">%d minuta</item>
        <item quantity="few">%d minuty</item>
        <item quantity="many">%d minuty</item>
        <item quantity="other">%d minut</item>
    </plurals>
    <plurals name="hod">
        <item quantity="one">%d hodina</item>
        <item quantity="few">%d hodiny</item>
        <item quantity="many">%d hodiny</item>
        <item quantity="other">%d hodin</item>
    </plurals>
    <string name="vytvorit">Vytvořit</string>
    <string name="potvrdit">Potvrdit</string>
    <string name="o_aplikaci">O aplikaci</string>
    <string name="doba_od_posledniho_otevreni">Od posledního otevření: %s min</string>
    <string name="otevrit_dp">Otevřít dopravní podnik</string>
    <string name="m_ctverecnych">%s m²</string>
    <string name="obyvatel">%s obyvatel</string>
    <string name="zadna_linka">Bohužel nevlastníte žádnou linku, pro vytvoření stiskněte tlačítko Nová linka</string>
    <string name="zadny_bus">Bohužel nevlastníte žádná vozidla, pro koupi stiskněte tlačítko Koupit Vozidlo</string>
    <string name="prodat_vsechna_vozidla">Prodat vybraná vozidla</string>
    <string name="prodat_vsechna_vozidla_za">Prodat vybraná vozidla za %s €?</string>
    <string name="uspesne_prodano">Úspěšně prodáno</string>
    <string name="slovo_vyuctovani">Vyúčtování</string>
    <string name="kamion">Kamión!</string>
    <string name="kamion_prijel">Moc vysoký kamión vjel do města a strhl všechny troleje.</string>
    <string name="vyse_investice">Výše investice</string>
    <string name="novy_dp">Nový dopravní podnik</string>
    <string name="nove_mesto">Nové město</string>
    <string name="schovat_viltry">Schovat filtry</string>
    <string name="filtrovat">Filtrovat</string>
    <string name="schovat_razeni">Schovat řazení</string>
    <string name="radit">Řadit</string>
    <string name="vytvorit_zastavku">Vytvořit zastávku za %s</string>
    <string name="vytvorit_kruhac">Postavit kruhový objezd za %s</string>
    <string name="odstranit_zastavku">Odstranit zastávku za %s</string>
    <string name="odstranit_kruhac">Odstranit kruhový objezd za %s</string>
    <string name="postavit_troleje">Postavit trolejovou trať za %s</string>
    <string name="odstranit_troleje">Odstranit trolejovou trať za %s</string>
    <string name="zrusit">Zrušit</string>
    <string name="podrobnosti_o_zisku">Podrobnosti o zisku</string>
    <string name="celkove_prijmy">Celkové příjmy: %s</string>
    <string name="celkove_vydaje">Celkové výdaje: %s</string>
    <string name="celkovy_zisk">Celkový zisk: %s</string>
    <string name="vydaje_za_infrastrukturu">Výdaje za infrastrukturu: %s</string>
    <string name="vydaje_za_zastavky">Zastávky: %s</string>
    <string name="vydaje_za_troleje">Trolejová síť: %s</string>
    <string name="vydaje_za_ekologii">Výdaje za ekologickou nezodpovědnost:</string>
    <string name="vydaje_za_neekologicke_vozy">Výdaje za neekologický vozový park: %s</string>
    <string name="zisk_linek">Zisk jednotlivých linek:</string>
    <string name="linka_vydelava_tohle">Linka %1$s: %2$s</string>
    <string name="zisk_vozidel">Zisk jednotlivých vozidel:</string>
    <string name="bus_prodelava_tolik">Bus č. %1$s ≫ -%2$s</string>
    <string name="bus_vydelava_tolik">Bus č. %1$s: %2$s - %3$s ≫ %4$s </string>
    <string name="nigdo_nebyl_ochoten">Za zainvestovanou částku Vám nikdo nebyl ochoten nabídnout své město, proto Vám bude odečtena desetina vkladu, ale nové město nezískáte.</string>
    <string name="bus_ma_naklady">náklady: %s</string>
    <string name="neco_mezera_neco_jinyho">%1$s %2$s</string>
    <string name="nadpis_vicenasobne_kupovani">Vícenásobné kupování</string>
    <string name="pocet_busuu">Počet %sů</string>
    <string name="nejprve_si_vytvorte_linku">Nejprve si vytvořte linku</string>
    <string name="zadejte_validni_pocet">Zadejte validní počet</string>
    <string name="uspesne_koupeno_tolik_busuu">Úspěšně koupeno %1$d %2$sů</string>
    <string name="ev_c_busu">Evidenční číslo %su</string>
    <string name="vyberte_ev_c">Vyberte evidenční číslo</string>
    <string name="upravit_ulici">Upravit ulici</string>
    <string name="upravit_krizovatku">Upravit křižovatku</string>
    <string name="prodat_dp">Prodat dopravní podnik</string>
    <string name="za_prodej_dp_dostanete">Prodáním dopravního podniku získáte peníze odpovídající hodnotě Vašeho vozového parku a přibližnou hodnotu města. Protože je prodej vždy riskantní, ne vždy musí být úplně úspěšný. Nevíte jistě, kolik peněz získáte, očekávaná částka je %s, což se ale může lišit až o 50 %%!.</string>
    <string name="prodat">Prodat</string>
    <string name="prodali_jste">Úspěšně jste prodali %1$s %2$s za %3$s</string>
    <string name="prodali_jste_jeden">Úspěšně jste prodali %1$s za %2$s</string>
    <string name="prodali_jste_dp">Úspěšně jste prodali dopravní podnik města %1$s za %2$s</string>
    <string name="vytvorit_linku">Vytvořit linku</string>
    <string name="nekonecne_mnoho">Nekonečně mnoho</string>
    <string name="nekonecne_malo">Nekonečně málo</string>
    <string name="velmi_nizke">velmi nízké</string>
    <string name="hodne_nizke">hodně nízké</string>
    <string name="nizke">nízké</string>
    <string name="pomerne_nizke">poměrně nízké</string>
    <string name="snizene">snížené</string>
    <string name="normalni">normální</string>
    <string name="pomerne_vysoke">poměrně vysoké</string>
    <string name="vysoke">vysoké</string>
    <string name="hodne_vysoke">hodně vysoké</string>
    <string name="velmi_vysoke">velmi vysoké</string>
    <string name="muzejni_bus">extrémně vysoké (muzejní bus)</string>
    <string name="JOSTOVSKE">joštovské</string>
    <string name="mesto_jostless">Město bez jošta</string>
    <string name="super_mesto">Super město</string>
    <string name="ultra_velkomesto">Ultra velké velkoměsto</string>
    <string name="velkomesto">Velkoměsto</string>
    <string name="velke_mesto">Velké město</string>
    <string name="mesto">Město</string>
    <string name="mestecko">Městečko</string>
    <string name="vesnice">Vesnice</string>
    <string name="kocka">Kočka</string>
    <string name="koncovka_dlouhy_velky_e">É</string>
    <string name="verze">Verze: %s</string>
    <string name="vytvorilo_ro_studios">Vytvořilo RO studios</string>
    <string name="jazyk">Jazyk: %s</string>
    <string name="porouchany">Porouchaný %s!</string>
    <string name="vas_bus_se_porouchal">Váš %1$s ev. č. %2$d se porouchal! Zaplaťe za jeho opravu!</string>
    <string name="zaplatit">Zaplatit: %s €</string>
    <string name="logaritmus_vyse_investice">Logaritmus výše investice</string>
    <string name="velke_mnozstvi_penez_za_dp">Zadali jste vysoké množství peněz a proto ne jen tak ledajaké město je schopno se nabídnout na dostatečné úrovni, proto musíte potvrdit, že chcete doopravdy investovat takto vysokou částku a vzít na vědomí, že nejspíš bude chvíli trvat, než se nějaké město přihlásí.</string>
    <string name="generace_mesta">"Probíhá generace měst"</string>
    <string name="odebrat_z_linek">Odebrat z linek</string>
    <string name="opravdu_chcete_odebrat_vozidla_z_linek">Opravdu chcete odebrat vybraná vozidla z jejich linek?</string>
    <string name="vybrano">Vybráno: %d</string>
    <string name="vyse_jizdneho">Výše jízdného</string>
    <string name="ahoj_joste">Ahoj jošte</string>
    <string name="pridat_troleje_linka">Přidat troleje na celou linku</string>
    <string name="kalibrovat">Kalibrovat</string>
    <string name="zobrazit_linky">Zobrazit linky</string>
    <string name="dalsi">Další</string>
    <string name="vybrat_vse">Vybrat vše</string>
    <string name="odebrat_z_linky">Odebrat z linky</string>
    <string name="zvecnit">Zvěčnit</string>
    <string name="jizdne">Jízdné: %s</string>
</resources>