<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionVybratVse"
        android:icon="@drawable/ic_baseline_select_all_24"
        android:title="@string/vybrat_vse"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionProdat"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/prodat"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionVice"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/dalsi"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/actionVypravit"
                android:icon="@drawable/ic_baseline_location_city_24_white"
                android:title="@string/vypravit"
                app:showAsAction="withText" />
            <item
                android:id="@+id/actionDomu"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/odebrat_z_linky"
                app:showAsAction="withText" />
        </menu>
    </item>
</menu>
