<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/zvolte_tema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swVicenasobnyKupovani" />

    <Button
        android:id="@+id/btnTema"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTema"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swAutomatickyEvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/automaticky_prirazovat_ev_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swVicenasobnyKupovani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:text="@string/vicenasobne_kupovani"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swAutomatickyEvc" />

    <Button
        android:id="@+id/btnDopravaNastaveni"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:iconTint="@color/tmava"
        app:layout_constraintBottom_toBottomOf="@+id/btnTema"
        app:layout_constraintEnd_toEndOf="@+id/btnTema"
        app:layout_constraintTop_toTopOf="@+id/btnTema" />

    <Button
        android:id="@+id/btnDolevaNastaveni"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:iconTint="@color/tmava"
        app:layout_constraintBottom_toBottomOf="@+id/btnTema"
        app:layout_constraintStart_toStartOf="@id/btnTema"
        app:layout_constraintTop_toTopOf="@+id/btnTema" />

</androidx.constraintlayout.widget.ConstraintLayout>